Updated stuff and things

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <ul class="nav-site nav-site-internal">
                 <li class="">.</li>
                 <li class=""><a href="#" target="_self">p5</a></li>
-                <li class=""><a href="#" target="_self">Web</a></li>
+                <!-- <li class=""><a href="#" target="_self">Web</a></li>
                 <li class=""><a href="#" target="_self">C++</a></li>
                 <li class=""><a href="#" target="_self">C</a></li>
                 <li class=""><a href="#" target="_self">Python</a></li>
@@ -25,7 +25,7 @@
                 <li class=""><a href="#" target="_self">GA</a></li>
                 <li class=""><a href="#" target="_self">ASM</a></li>
                 <li class=""><a href="#" target="_self">CS</a></li>
-                <li class=""><a href="#" target="_self">WD</a></li>
+                <li class=""><a href="#" target="_self">WD</a></li> -->
                 <!-- <li class="navSearchWrapper reactNavSearchWrapper"><span class="algolia-autocomplete" style="position: relative; display: inline-block; direction: ltr;"><input type="text" id="search_input_react" placeholder="Search" title="Search" class="aa-input" autocomplete="off" spellcheck="false" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-labelledby="search_input_react" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;"><pre aria-hidden="true" style="position: absolute; visibility: hidden; white-space: pre; font-family: Arial; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 300; word-spacing: 0px; letter-spacing: normal; text-indent: 0px; text-rendering: auto; text-transform: none;"></pre><span class="aa-dropdown-menu" role="listbox" id="algolia-autocomplete-listbox-0" style="position: absolute; top: 100%; z-index: 100; display: none; left: 0px; right: auto;"><div class="aa-dataset-1"></div></span></span></li> -->
               </ul>
             </nav>
@@ -43,7 +43,7 @@
                 <div class="navGroup"><h3 class="navGroupCategoryTitle">Class</h3>
                   <ul>
                     <li class="navListItem"><a class="navItem" href="#">p5</a></li>
-                    <li class="navListItem"><a class="navItem" href="#">Web</a></li>
+                    <!-- <li class="navListItem"><a class="navItem" href="#">Web</a></li>
                     <li class="navListItem"><a class="navItem" href="#">C++</a></li>
                     <li class="navListItem"><a class="navItem" href="#">C</a></li>
                     <li class="navListItem"><a class="navItem" href="#">Python</a></li>
@@ -52,7 +52,7 @@
                     <li class="navListItem"><a class="navItem" href="#">NN</a></li>
                     <li class="navListItem"><a class="navItem" href="#">GA</a></li>
                     <li class="navListItem"><a class="navItem" href="#">ASM</a></li>
-                    <li class="navListItem"><a class="navItem" href="#">WD</a></li>
+                    <li class="navListItem"><a class="navItem" href="#">WD</a></li> -->
                   </ul>
                 </div>
               </div>
@@ -68,31 +68,16 @@
             <article>
               <div>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>
+                  The following lessons were developed by <strong>Mikian Musser</strong> for use at <code>Code Central.</code>
+                  <br>
+                  <br>
+                  Select a class and work through each project. Each project completion is <codeG>1000 points</codeG> and each class completion is <codeG>2000 points.</codeG>
+                </p>
 
                 <a class="class-page-link button" href="https://www.GitHub.com/mm909" rel="noreferrer noopener">GitHub</a>
-                <a class="class-page-link button" href="https://www.GitHub.com/mm909" rel="noreferrer noopener">GitHub</a>
-                <h2>p5</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-                <h2>Web</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-                <h2>C++</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-                <h2>C</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-                <h2>Python</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-                <h2>p5</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-                <h2>p5</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+                <h2>Intro p5</h2>
+                <p>p5.js is a powerful library writen in Java Script. In this class you will build common games like pong, snake, and flappy bird.  </p>
 
             </article>
           </div>
