--- a/introp5.html
+++ b/introp5.html
@@ -14,7 +14,7 @@
             <nav class="slidingNav">
               <ul class="nav-site nav-site-internal">
                 <li class="">.</li>
-                <li class=""><a href="#" target="_self">Home</a></li>
+                <li class=""><a href="index.html" target="_self">Home</a></li>
                 <!-- <li class=""><a href="#" target="_self">Web</a></li>
                 <li class=""><a href="#" target="_self">C++</a></li>
                 <li class=""><a href="#" target="_self">C</a></li>
@@ -40,19 +40,17 @@
           <div class="toggleNav">
             <section class="navWrapper wrapper">
               <div class="navGroups">
-                <div class="navGroup"><h3 class="navGroupCategoryTitle">Class</h3>
+                <div class="navGroup"><h3 class="navGroupCategoryTitle">Intro p5</h3>
                   <ul>
-                    <li class="navListItem"><a class="navItem" href="#">p5</a></li>
-                    <!-- <li class="navListItem"><a class="navItem" href="#">Web</a></li>
-                    <li class="navListItem"><a class="navItem" href="#">C++</a></li>
-                    <li class="navListItem"><a class="navItem" href="#">C</a></li>
-                    <li class="navListItem"><a class="navItem" href="#">Python</a></li>
-                    <li class="navListItem"><a class="navItem" href="#">React</a></li>
-                    <li class="navListItem"><a class="navItem" href="#">AI</a></li>
-                    <li class="navListItem"><a class="navItem" href="#">NN</a></li>
-                    <li class="navListItem"><a class="navItem" href="#">GA</a></li>
-                    <li class="navListItem"><a class="navItem" href="#">ASM</a></li>
-                    <li class="navListItem"><a class="navItem" href="#">WD</a></li> -->
+                    <li class="navListItem"><a class="navItem" href="#">1. What is p5?</a></li>
+                    <li class="navListItem"><a class="navItem" href="#">2. Needed files</a></li>
+                    <li class="navListItem"><a class="navItem" href="#">3. Library functions</a></li>
+                    <li class="navListItem"><a class="navItem" href="#">4. X and Y</a></li>
+                    <li class="navListItem"><a class="navItem" href="#">5. Shapes</a></li>
+                    <li class="navListItem"><a class="navItem" href="#">6. Colors</a></li>
+                    <li class="navListItem"><a class="navItem" href="#">7. Variables</a></li>
+                    <li class="navListItem"><a class="navItem" href="#"> 8. Movement!</a></li>
+                    <li class="navListItem"><a class="navItem" href="#"><textG>Project 1</textG></a></li> 
                   </ul>
                 </div>
               </div>
@@ -70,9 +68,6 @@
 
                 <p>
                   The following lessons were developed by <a href="http://MikianMusser.com"><strong>Mikian Musser</strong> </a> for use at <a href="https://mycodecentral.com/"><code>Code Central.</code></a>
-                  <br>
-                  <br>
-                  Select a class and work through each project. Each project completion is <codeG>1000 points</codeG> and each class completion is <codeG>2000 points.</codeG>
                 </p>
 
                 <a class="class-page-link button" href="https://www.GitHub.com/mm909" rel="noreferrer noopener">GitHub</a>
