--- a/introp5.html
+++ b/introp5.html
@@ -50,7 +50,7 @@
                     <li class="navListItem"><a class="navItem" href="#">6. Colors</a></li>
                     <li class="navListItem"><a class="navItem" href="#">7. Variables</a></li>
                     <li class="navListItem"><a class="navItem" href="#"> 8. Movement!</a></li>
-                    <li class="navListItem"><a class="navItem" href="#"><textG>Project 1</textG></a></li> 
+                    <li class="navListItem"><a class="navItem" href="#"><textG>Project 1</textG></a></li>
                   </ul>
                 </div>
               </div>
@@ -70,10 +70,9 @@
                   The following lessons were developed by <a href="http://MikianMusser.com"><strong>Mikian Musser</strong> </a> for use at <a href="https://mycodecentral.com/"><code>Code Central.</code></a>
                 </p>
 
-                <a class="class-page-link button" href="https://www.GitHub.com/mm909" rel="noreferrer noopener">GitHub</a>
-                <a href="introp5.html"><h2>Intro p5</h2></a>
-                <p>p5.js is a powerful library writen in Java Script. In this class you will learn how to look at an end product, like a game, and break it down into it's base parts. By doing this we can better understand how to build common games like pong, snake, and flappy bird. And other applications like purple rain, fireworks, and simple physics.</p>
-
+                <!-- <a class="class-page-link button" href="https://www.GitHub.com/mm909" rel="noreferrer noopener">GitHub</a> -->
+                <a href="introp5.html"><h2>What is p5?</h2></a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </article>
           </div>
           <!-- <div class="docs-prevnext"><a class="docs-prev button" href="#">← Lorem</a><a class="docs-next button" href="#">Ipsum →</a></div> -->
