Added lots to introp5 project 1

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
               <ul class="nav-site nav-site-internal">
                 <li class="">.</li>
                 <li class=""><a href="#" target="_self">Home</a></li>
+                <li class=""><a href="introp5.html" target="_self">Intro p5</a></li>
                 <!-- <li class=""><a href="#" target="_self">Web</a></li>
-                <li class=""><a href="#" target="_self">C++</a></li>
                 <li class=""><a href="#" target="_self">C</a></li>
                 <li class=""><a href="#" target="_self">Python</a></li>
                 <li class=""><a href="#" target="_self">React</a></li>
@@ -42,7 +42,7 @@
               <div class="navGroups">
                 <div class="navGroup"><h3 class="navGroupCategoryTitle">Class</h3>
                   <ul>
-                    <li class="navListItem"><a class="navItem" href="#">p5</a></li>
+                    <li class="navListItem"><a class="navItem" href="introp5.html">p5</a></li>
                     <!-- <li class="navListItem"><a class="navItem" href="#">Web</a></li>
                     <li class="navListItem"><a class="navItem" href="#">C++</a></li>
                     <li class="navListItem"><a class="navItem" href="#">C</a></li>
