Created instancing mode

--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
                 <a class="class-page-link button" href="https://www.GitHub.com/mm909" rel="noreferrer noopener">GitHub</a>
                 <a href="introp5.html"><h2>Intro p5</h2></a>
                 <p>p5.js is a powerful library writen in Java Script. In this class you will learn how to look at an end product, like a game, and break it down into it's base parts. By doing this we can better understand how to build common games like pong, snake, and flappy bird. And other applications like purple rain, fireworks, and simple physics.</p>
+                <a href="introp5.html"><h2>Intro p5</h2></a>
+
+                <p>p5.js is a powerful library writen in Java Script. In this class you will learn how to look at an end product, like a game, and break it down into it's base parts. By doing this we can better understand how to build common games like pong, snake, and flappy bird. And other applications like purple rain, fireworks, and simple physics.</p>
+                <a href="introp5.html"><h2>Intro p5</h2></a>
+
+                <p>p5.js is a powerful library writen in Java Script. In this class you will learn how to look at an end product, like a game, and break it down into it's base parts. By doing this we can better understand how to build common games like pong, snake, and flappy bird. And other applications like purple rain, fireworks, and simple physics.</p>
 
             </article>
           </div>
