--- a/projects/introp5/project1/index.html
+++ b/projects/introp5/project1/index.html
@@ -13,6 +13,7 @@
   <script type= "text/javascript" src= "../../../js/smoothscroll.js"></script>
   <script type= "text/javascript" src= "../../../js/question.js"></script>
   <script type= "text/javascript" src= "showcase/sketch.js"></script>
+  <script type= "text/javascript" src= "challenge/sketch.js"></script>
 </head>
 
 <body class="sideNavVisible">
@@ -272,6 +273,14 @@ function draw() {
             </div>
             <p><codeR> Challenge 3: Make the colors change using the mouse - 500 points</codeR></p>
             <p>We want to create an even more interactive sketch and change the color as we move the mouse.</p>
+            <p>To do that we will have to use the <code>mouseX</code> and <code>mouseY</code> variables again.</p>
+            <div id="q7">
+              <p>
+                <codeG class="question" id="7" >Hint:</codeG>
+                <span class="answer">We updated the circle's location by assigning mouseX to x: <code>x = mouseX.</code> Following that formula, assign mouseX or mouseY to the R, G, or B variables. <codeR>Make sure to do it in the draw function!</codeR> </span>
+              </p>
+            </div>
+            <div id="challengeContainer" style="height:100px;width:auto;"></div>
 
 
             </article>
@@ -287,22 +296,13 @@ function draw() {
         <div>
           <h5><a href="#">Lorem</a></h5>
           <a href="#">Lorem</a>
-          <a href="#">Lorem</a>
-          <a href="#">Lorem</a>
-          <a href="#">Lorem</a>
         </div>
         <div>
           <h5><a href="#">Lorem</a></h5>
           <a href="#">Lorem</a>
-          <a href="#">Lorem</a>
-          <a href="#">Lorem</a>
-          <a href="#">Lorem</a>
         </div>
         <div>
           <h5><a href="#">Lorem</a></h5>
-          <a href="#">Lorem</a>
-          <a href="#">Lorem</a>
-          <a href="#">Lorem</a>
           <a href="#">Lorem</a>
         </div>
         <!-- <section class="copyright">Copyright © 2018 Facebook Inc.</section> -->
