--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -8,12 +8,12 @@
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
-  <script type="text/javascript" src="../../js/scrolling.js"></script>
   <script type="text/javascript" src="../../js/prettyPrint.js"></script>
+  <script type="text/javascript" src="../../js/scrolling.js"></script>
   <script type="text/javascript" src="../../js/progressbar.js"></script>
-  <script type="text/javascript" src="../../js/smoothscroll.js"></script>
-  <script type="text/javascript" src="../../js/question.js"></script>
   <script type="text/javascript" src="../../js/toc.js"></script>
+  <script type="text/javascript" src="../../js/question.js"></script>
+  <script type="text/javascript" src="../../js/smoothscroll.js"></script>
   <style media="screen">
     .docsNavContainer {
       height: calc(75vh) !important;
@@ -151,8 +151,38 @@
                   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
                 <a id="headers"><h2>Headers <code>&lt;h1&gt;</code></h2></a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                <div class='CodeBoxL'>
+                  <pre class="prettyprint linenums lang-js CodeBoxBuffer">
+jQuery(document).ready(function() {
+  // BUILD: TOC Table //
+  for (var i = 0; i < $("#mainContent").find("section").length; i++) {
+    TOC_names.push('_' + $("#mainContent").find("section")[i].id.split("_")[1])
+  }
+  // BUILD: TOC Break Table //
+  TOC_break = [];
+  for (var i = 0; i < TOC_names.length; i++) {
+    TOC_break.push(document.getElementById(TOC_names[i]).getBoundingClientRect().y);
+  }
+});
+                   </pre>
+                </div>
+
+                <div class='CodeBoxL'>
+                  <pre class="prettyprint linenums lang-js CodeBoxBuffer">
+&lt;div class="para"&gt;
+  &lt;div class="fl"&gt;
+    &lt;p> Rename the folder to “firstwebsite”&lt;/p&gt;
+    &lt;p> This will be where you place all of your files for your website.&lt;/p&gt;
+  &lt;/div&gt;
+  &lt;div class="fr"&gt;
+    &lt;div class="tutImageContainer"&gt;
+      &lt;img class="tutImage" src="examples/images/firstwebsite.png" alt=""&gt;&lt;/img&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+                   </pre>
+                </div>
 
                 <a id="paragraphs"><h2>Paragraphs <code>&lt;p&gt;</code></h2></a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
