updated some links

--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -34,9 +34,9 @@
                 <div class="navGroup"><a href="#top"><h3 class="navGroupCategoryTitle">Project 1</h3></a>
                   <ul id="toc">
                     <progress id="pb" value="0" max="100"></progress>
+                    <li class="navListItem"><a class="navItem" href="#learninggoals"><codeG>Learning Goals</codeG></a></li>
                     <li class="navListItem"><a class="navItem" href="#_HTML"><codeG>&lt;HTML&gt;</codeG> </a></li>
                     <section id="TOC_HTML">
-                      <li class="navListItem"><a class="navItem" href="#learninggoals">0. Learning Goals</a></li>
                       <li class="navListItem"><a class="navItem" href="#gettingstartedhtml">1. Getting Started</a></li>
                       <li class="navListItem"><a class="navItem" href="#files">2. Files</a></li>
                       <li class="navListItem"><a class="navItem" href="#howtoedit">3. How to edit</a></li>
@@ -99,7 +99,7 @@
                 website with many interactable features.
               </p>
 
-              <a id="learninggoals"><h2>Learning Goals</h2></a>
+              <a id="learninggoals"><h2><codeG>Learning Goals</codeG></h2></a>
               <ol>
                 <li>Good file structure for your website</li>
                 <ol>
@@ -212,7 +212,6 @@
                 </div>
 
                 <a id="howtoedit"><h2>How to edit</h2></a>
-
                 <p>
                   Awesome! If you double click on that file, you should see that opens
                   a new page on your browser. You should also notice that page is blank…
@@ -507,8 +506,11 @@
                   when they can be useful. Tables use headers, rows, and data to separate the information in a way
                   that is clean and easy to read.
                 </p>
-                <div class='CodeBoxL '>
-                  <pre class="prettyprint linenums lang-html CodeBoxBuffer" >
+
+                <h3 class="paraTitle">Table Element</h3>
+                <div class="paraSection">
+                  <div class='CodeBoxL '>
+                    <pre class="prettyprint linenums lang-html CodeBoxBuffer" >
 &lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
@@ -541,9 +543,10 @@
     &lt;/table>
   &lt;/body&gt;
 &lt;/html&gt;</pre>
-                </div>
-                <div class="tutImageContainer">
-                  <img class="tutImage" src="examples/images/table.png" alt=""></img>
+                  </div>
+                  <div class="tutImageContainer">
+                    <img class="tutImage" src="examples/images/table.png" alt=""></img>
+                  </div>
                 </div>
                 <br>
                 <p>
@@ -564,10 +567,68 @@
                   <code>&lt;td>&lt;/td></code> is table data for regular records.
                 </p>
 
-                <a id="images"><h2>Images <code>&lt;image&gt;</code></h2>
-                </a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a id="images"><h2>Images <code>&lt;image&gt;</code></h2></a>
+                <p>
+                  Just text in a website can look rather boring,
+                  so we’re going to spice it up by placing images into
+                  the page.
+                </p>
+
+                <h3 class="paraTitle">Image element</h3>
+                <div class="paraSection">
+                  <div class="para">
+                    <div class="fl">
+                      <p>
+                        Go and search up whatever you’d like to add into your page.
+                      </p>
+                    </div>
+                    <div class="fr">
+                      <div class="tutImageContainer">
+                        <img class="tutImage" src="examples/images/newfolder.png" alt=""></img>
+                      </div>
+                    </div>
+                  </div>
+                  <br>
+                  <div class="para">
+                    <div class="fl">
+                      <p>
+                        Right click on image
+                      </p>
+                    </div>
+                    <div class="fr">
+                      <div class="tutImageContainer">
+                        <img class="tutImage" src="examples/images/firstwebsite.png" alt=""></img>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="para">
+                    <div class="fl">
+                      <p>
+                        Create a new folder in your website folder
+                        called “images” and place your picture in
+                        there.
+                      </p>
+                    </div>
+                    <div class="fr">
+                      <div class="tutImageContainer">
+                        <img class="tutImage" src="examples/images/firstwebsite.png" alt=""></img>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="para">
+                    <div class="fl">
+                      <p>
+                        Right click on image
+                      </p>
+                    </div>
+                    <div class="fr">
+                      <div class="tutImageContainer">
+                        <img class="tutImage" src="examples/images/firstwebsite.png" alt=""></img>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
 
                 <a id="links"><h2>Links <code>&lt;a&gt;</code></h2></a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
